--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,7 @@
 version: "3.8"
 
 services: 
-  app:
-    build: 
-      context: .
-      dockerfile: Dockerfile
-    ports: 
-      - 3000:3000
-    volumes: 
-      - .:/app
-      - '/app/node_modules'
-    depends_on: 
-      - mysql_server
+
   
   mysql_server:
     image: mysql:8.0
@@ -20,4 +10,11 @@ services:
       - MYSQL_USER=killian
       - MYSQL_PASSWORD=secret
       - MYSQL_ROOT_PASSWORD=secret
+    ports:
+      - 3306:3306 
   
+  rabbitmq:
+    image: rabbitmq:3.11-management
+    ports:
+      - 5672:5672
+      - 15672:15672
