--- a/package.json
+++ b/package.json
@@ -3,13 +3,17 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "dev": "nodemon index.js",
+    "prod": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "KillianLV",
   "license": "ISC",
   "dependencies": {
+    "amqplib": "^0.10.3",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mysql2": "^3.0.1"
   }
