--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
 RABITMQ_QUEUE_NAME="hello"
 API_PORT=3000
+STATUS_WAITING_FOR_PROCESSING="waiting for processing"
+STATUS_DONE="Order done"
+AMQP_CONNECTION_STRING="amqp://guest:guest@rabbitmq:5672"
