--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,32 @@ version: "3.8"
 
 services: 
 
-  
+  app:
+    build: 
+      context: .
+      dockerfile: Dockerfile
+    ports: 
+      - 3000:3000
+    volumes: 
+      - .:/app
+      - '/app/node_modules'
+    entrypoint: "/app/entrypoint.sh"
+    depends_on: 
+      - mysql_server
+      - rabbitmq
+
+  worker:
+    build: 
+      context: .
+      dockerfile: Dockerfile_worker
+    volumes: 
+      - .:/app
+      - '/app/node_modules'
+    entrypoint: "/app/entrypoint2.sh"
+    depends_on: 
+      - mysql_server
+      - rabbitmq
+      
   mysql_server:
     image: mysql:8.0
     environment: 
