--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "dev": "nodemon index.js",
     "prod": "node index.js",
+    "worker": "node worker.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "KillianLV",
@@ -15,6 +16,7 @@
     "amqplib": "^0.10.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "mysql2": "^3.0.1"
+    "mysql2": "^3.0.1",
+    "nodemon": "^1.8.0"
   }
 }
