--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-RABITMQ_QUEUE_NAME="hello"
+RABITMQ_QUEUE_NAME="order"
 API_PORT=3000
 STATUS_WAITING_FOR_PROCESSING="waiting for processing"
 STATUS_DONE="Order done"
